# NevadaToolset

./: CMakeLists.txt
.github/workflows/: windows.yml
src/: CMakeLists.txt
src/ini2str/: wxstrgen.cpp  wxstrgenui.xrc
